# mcp-oauth-gateway

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AUDIT_FICTIONAL_FEATURES.md  CLAUDE.md  FASTMCP_ANALYSIS.md  IMPLEMENTATION_NOTES.md  MCP_HTTP_STDIO_IMPLEMENTATION.md  README.md  client_name_update_list.md  coverage.json  debug_mcp_protocol.py  docker-compose.coverage.yml  docker-compose.yml  docs_inconsistencies_report.md  investigation_summary.md  justfile  logrotate.conf  mcp-template.docker-compose.yml  pixi.toml  pytest.ini  ruff.toml  test_input.py  test_output.txt
.github/workflows/: code-quality-guardian.yml  deploy-docs.yml
auth/: CLAUDE.md  Dockerfile  Dockerfile.coverage  __init__.py  docker-compose.yml  main.py  main_new.py  requirements.txt
coverage-spy/: CLAUDE.md  sitecustomize.py
docs/: DOCUMENTATION_UPDATE_SUMMARY.md  README.md  _config.yml  _toc.yml  api.md  architecture.md  build.sh  client-rfc7592.md  deployment.md  development.md  documentation-summary.md  index.md  installation.md  justfile-reference.md  logging-guide.md  oauth-management-commands.md  overview.md  package-documentation-standard.md  parallel-testing-guide.md  production-test-install.md  quick-install.md  services.md  test-cleanup-guide.md  test-registration-cleanup.md  test-update-example.py  usage.md
docs/api/: client-registration.md  error-codes.md  index.md  mcp-endpoints.md  oauth-endpoints.md
docs/architecture/: components.md  device-flow.md  index.md  mcp-integration.md  mcp-protocol.md  oauth-architecture.md  overview.md  (+7 more)
mcp-chroma/: CLAUDE.md  Dockerfile  docker-compose.yml  test_chroma_capabilities.py
mcp-echo/: CLAUDE.md  Dockerfile  docker-compose.yml
mcp-echo-stateful/: CLAUDE.md  Dockerfile  docker-compose.yml
mcp-echo-stateless/: CLAUDE.md  Dockerfile  docker-compose.yml
mcp-echo-streamablehttp-server-stateful/: Dockerfile  README.md  pyproject.toml
mcp-echo-streamablehttp-server-stateful/src/mcp_echo_streamablehttp_server_stateful/: __main__.py  server.py
mcp-echo-streamablehttp-server-stateless/: CLAUDE.md  LICENSE  README.md  example_client.py  justfile  pyproject.toml  test_server.py
mcp-echo-streamablehttp-server-stateless/src/mcp_echo_streamablehttp_server_stateless/: __main__.py  server.py
mcp-everything/: CLAUDE.md  Dockerfile  docker-compose.yml
mcp-fetch/: CLAUDE.md  Dockerfile  docker-compose.yml  mcp_fetch_server.py  mcp_stdio_http_proxy.py  mcp_stdio_http_proxy_fixed.py  run_mcp_http_server.py  simple_mcp_server.py
mcp-fetch-streamablehttp-client/: CLAUDE.md  README.md  pyproject.toml
mcp-fetch-streamablehttp-client/examples/: basic_usage.py  oauth_example.py
mcp-fetch-streamablehttp-client/src/mcp_fetch_streamablehttp_client/: __init__.py  cli.py  client.py  exceptions.py
mcp-fetch-streamablehttp-server/: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-fetch-streamablehttp-server/src/mcp_fetch_streamablehttp_server/: __init__.py  __main__.py  fetch_handler.py  server.py  transport.py
mcp-fetchs/: CLAUDE.md  Dockerfile  docker-compose.yml
mcp-filesystem/: CLAUDE.md  Dockerfile  docker-compose.yml
mcp-memory/: CLAUDE.md  Dockerfile  docker-compose.yml
mcp-oauth-dynamicclient/: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
mcp-playwright/: CLAUDE.md  Dockerfile  docker-compose.yml
mcp-redis/: Dockerfile  docker-compose.yml
mcp-sequentialthinking/: CLAUDE.md  Dockerfile  docker-compose.yml
mcp-stdio-http/: CHANGELOG.md  README.md  pyproject.toml
mcp-stdio-http/examples/: basic_usage.py
mcp-stdio-http/src/mcp_stdio_http/: __init__.py  cli.py  proxy.py
mcp-streamablehttp-server/: README.md  pyproject.toml
mcp-streamablehttp-server/src/mcp_streamablehttp_server/: __init__.py  cli.py  proxy.py
mcp-time/: CLAUDE.md  Dockerfile  docker-compose.yml
mcp-tmux/: CLAUDE.md  Dockerfile  docker-compose.yml
scripts/: __init__.py  add_parallel_test_support.py  analyze_error_contexts.py  analyze_error_patterns.py  analyze_fixture_cleanup.py  analyze_oauth_logs.py  analyze_real_coverage.py  analyze_registration_cleanup.py  analyze_registration_cleanup_issues.py  analyze_test_performance.py  apply_unique_client_updates.py  audit_test_registrations.py  auto_fix_client_names.py  backup_oauth_data.py  callback_receiver.py  capture_mcp_env.py  capture_mcp_env_interactive.py  check_claude_clients.py  check_coverage_files.py  check_coverage_schema.py  check_env_tokens.py  check_services_ready.py  check_test_cleanup.py  check_test_requirements.py  check_time.py  check_token_expiry.py  cleanup_non_test_registrations.py  cleanup_specific_clients.py  cleanup_test_data.py  cleanup_test_registrations.py  comment_httpbin_tests.py  complete_mcp_oauth.py  create_mcp_config.py  debug_400_error.py  debug_claude_issue.py  debug_coverage.py  debug_jwt_key.py  debug_logging.py  debug_mcp_fetch.py  debug_mcp_fetch_tools.py  (+122 more)
tests/: __init__.py  conftest.py  jwt_test_helper.py  mcp_helpers.py  test_additional_coverage.py  test_auth_cors.py  test_auth_error_paths.py  test_basic_health.py  test_claude_ai_routing_scenario.py  test_claude_integration.py  test_constants.py  test_coverage_gaps.py  test_coverage_gaps_specific.py  test_coverage_improvements.py  test_docker_compose_validation.py  test_eternal_client.py  test_existing_oauth_credentials.py  test_fetch_speedup_utils.py  test_full_oauth_flow.py  test_github_credentials_valid.py  test_github_integration_errors.py  test_mcp_ai_hostnames.py  test_mcp_auth_working.py  test_mcp_chroma_integration.py  test_mcp_client_oauth.py  test_mcp_client_proxy.py  test_mcp_client_rfc7592.py  test_mcp_cors.py  test_mcp_debug.py  test_mcp_echo_all_urls.py  test_mcp_echo_client_commands.py  test_mcp_echo_client_full.py  test_mcp_echo_diagnostic_tools.py  test_mcp_echo_integration.py  test_mcp_echo_protocol_compliance.py  test_mcp_echo_security.py  test_mcp_echo_stateful_replay.py  test_mcp_everything_client_full.py  test_mcp_everything_client_simple.py  test_mcp_everything_comprehensive.py  (+56 more)
traefik/: CLAUDE.md  docker-compose.yml
(+86 files in other folders)
