[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-echo-streamablehttp-server-stateful"
version = "0.1.0"
description = "Stateful MCP Echo Server implementing MCP 2025-06-18 StreamableHTTP transport with session management"
authors = [
    {name = "MCP OAuth Gateway", email = "noreply@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.3.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/example/mcp-echo-streamablehttp-server-stateful"
Repository = "https://github.com/example/mcp-echo-streamablehttp-server-stateful"

[project.scripts]
mcp-echo-stateful = "mcp_echo_streamablehttp_server_stateful.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
