[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-fetch-streamablehttp-client"
version = "0.1.0"
description = "Pure Python client for MCP fetch server over Streamable HTTP transport"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Andreas Trawoeger"},
]
keywords = ["mcp", "model-context-protocol", "fetch", "client", "streamable-http"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.24.0",
    "anyio>=3.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-fetch-client = "mcp_fetch_streamablehttp_client.cli:main"

[project.urls]
Homepage = "https://github.com/atrawog/mcp-oauth-gateway/tree/main/mcp-fetch-streamablehttp-client"
Repository = "https://github.com/atrawog/mcp-oauth-gateway/tree/main/mcp-fetch-streamablehttp-client"
Issues = "https://github.com/atrawog/mcp-oauth-gateway/issues"
Documentation = "https://atrawog.github.io/mcp-oauth-gateway"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fetch_streamablehttp_client"]