[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-fetch-streamablehttp-server"
version = "0.1.0"
description = "MCP fetch server with native Streamable HTTP transport implementation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MCP OAuth Gateway Team", email = "mcp@example.com"},
]
dependencies = [
    "mcp>=1.2.1",
    "httpx>=0.28.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "robotspy>=0.8.0",
    "beautifulsoup4>=4.12.3",
    "aiofiles>=25.1.0",
    "uvloop>=0.21.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_fetch_streamablehttp_server*"]