[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-streamablehttp-server"
version = "0.1.0"
description = "A generic stdio-to-streamable-HTTP server for MCP (Model Context Protocol) servers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["mcp", "model-context-protocol", "server", "streamable-http", "stdio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-streamablehttp-server = "mcp_streamablehttp_server.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/mcp-streamablehttp-server"
Repository = "https://github.com/yourusername/mcp-streamablehttp-server.git"
Issues = "https://github.com/yourusername/mcp-streamablehttp-server/issues"
Documentation = "https://github.com/yourusername/mcp-streamablehttp-server#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_streamablehttp_server"]